service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular-app
  name: angular-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: angular-app
  type: LoadBalancer
